--- a/html/tree.html
+++ b/html/tree.html
@@ -76,7 +76,7 @@ background-attachment: fixed;">
     </div>
 </nav>
 <div class="header">
-  <h1>Wellcome Studytree!</h1>
+  <h1>Welcome To Studytree!</h1>
 </div>
   
 	<!-- load the d3.js library -->
@@ -539,7 +539,7 @@ background-attachment: fixed;">
                 <h5 style="text-align:center;">★每棵树输入格式见文本域提示内容</h5>
                 <h5 style="text-align:center;"style="color:white">★点击节点可进行缩放哦！</h5>
 				<textarea id="user" style="border:0px;background:#FFF0F5" cols="40" rows="7"
-    placeholder="导师：张三
+    placeholder="例：导师：张三
 2016级博士生：天一、王二、吴五
 2015级硕士生：李四、王五、许六
 2016级硕士生：刘一、李二、李三
